tests/err_qty/exp_frac_one_div_zero_hex.rs
#![allow(unused_imports)]
use dana::{qty, symbols::*};

fn main() {
    let _err = qty![1.0 m^(1/0x00)];
}
